Feat[] : Merge Development

--- a/index.html
+++ b/index.html
@@ -1,33 +1,53 @@
-<!doctype html>
-<html class="no-js" lang="">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cyprien Bons - CV</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
-
+    <header>
+        <h1>Cyprien Bons</h1>
+        <p>Étudiant en Informatique</p>
+        <img src="img/cyprien.jpg" alt="Photo of Cyprien Bons" style="width:150px;height:auto;">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="experiences">
+        <h2>Expériences Professionnelles</h2>
+        <div>
+            <h3>CCBTA</h3>
+            <p>Agent de propreté urbaine, Bellegarde (30)</p>
+            <p>Juillet / Août 2024</p>
+            <p>Cette expérience m'a permis de découvrir le monde professionnel, d'apprendre à travailler en équipe et d'accomplir mes tâches de manière efficace et autonome.</p>
+        </div>
+    </section>
+    <section id="education">
+        <h2>Diplômes et Formations</h2>
+        <div>
+            <h3>Lycée Emmanuel d’Alzon Nîmes (30)</h3>
+            <p>Admis Mention Assez Bien</p>
+            <p>2019 - 2023</p>
+            <p>BAC technologique STI2D</p>
+        </div>
+        <div>
+            <h3>IUT Montpellier</h3>
+            <p>En cours de formation</p>
+            <p>2023 - 2026</p>
+            <p>BUT Informatique</p>
+        </div>
+    </section>
+    <footer>
+        <p>Email: <a href="mailto:pro.bons.cyprien@gmail.com">pro.bons.cyprien@gmail.com</a></p>
+        <p>Phone: +07 68 51 20 06</p>
+        <p>Address: 91 Impasse Villehardouin, 34090 Montpellier</p>
+        <p>Permis B</p>
+    </footer>
 </body>
-
 </html>
