--- a/projets.html
+++ b/projets.html
@@ -21,15 +21,48 @@
             <p>CV</p>
         </a>
         <a href="http://localhost:63342/Site-Web/projets.html">
-            <p>PROJETS</p>
+            <p class="actuel">PROJETS</p>
         </a>
         <a href="http://localhost:63342/Site-Web/contact.html">
-            <p class="actuel">CONTACT</p>
+            <p>CONTACT</p>
         </a>
     </div>
 </header>
 <body style="margin: 0">
-
+<div class="cvprojet">
+    <div style="width:724px;">
+        <div style="display: flex; align-items: center; justify-content: center">
+            <div class="carre1"></div>
+            <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Projet</strong></p>
+        </div>
+        <div class="section">
+            <div class="sectionprojet1">
+                <div style="display: flex">
+                    <div class="carre3"></div>
+                    <div style="padding: 0 20px">
+                        <h3>LegendsBuster</h3>
+                        <h2 style="font-weight: normal">Montpellier - France</h2>
+                    </div>
+                </div>
+                <p>
+                    LegendsBuster est un projet personnel que j'ai commencé en 2021.
+                    C'est un jeu vidéo de type MMORPG, c'est-à-dire un jeu de rôle en ligne massivement multijoueur.
+                </p>
+                <div style="display: flex; justify-content: center; padding: 20px 0">
+                    <a href="http://localhost:63342/Site-Web/projets.html" class="bonton2">
+                        <p style="margin: 0;">Voir le projet</p>
+                    </a>
+                </div>
+            </div>
+            <div>
+                <img src="css/img/LegendsBuster.png" alt="LegendsBuster">
+            </div>
+        </div>
+        <div class="section">
+            <p>dsqdqsdqsd</p>
+        </div>
+    </div>
+</div>
 </body>
 <footer>
     <div class="footer">
