--- a/cv.html
+++ b/cv.html
@@ -8,11 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
-    <div class="header">
+    <a href="http://localhost:63342/Site-Web/index.html" class="header">
         <div class="carre"></div>
         <h1>Cyprien Bons</h1>
         <div>/ Étudiant en Informatique</div>
-    </div>
+    </a>
     <div class="header2">
         <a href="http://localhost:63342/Site-Web/index.html">
             <p>À PROPOS DE MOI</p>
@@ -21,10 +21,7 @@
             <p class="actuel">CV</p>
         </a>
         <a href="http://localhost:63342/Site-Web/projets.html">
-            <p>PROJETS</p>
-        </a>
-        <a href="http://localhost:63342/Site-Web/contact.html">
-            <p>CONTACT</p>
+            <p>Projets</p>
         </a>
     </div>
 </header>
@@ -37,24 +34,46 @@
         </div>
         <div style="display: flex; width: 724px; justify-content: space-between; margin: 20px 0;">
             <h1>Formation</h1>
-            <a href="http://localhost:63342/Site-Web/cv.html" class="bonton3">
+            <a href="docs/CV_2024_Cyprien_BONS_INFORMATIQUE_V5.pdf" class="bonton3">
                 <p style="margin: 0;">TÉLÉCHARGER CV</p>
             </a>
         </div>
         <div class="section">
             <div class="sectioncv2">
-                <h3>2022 - Maintenant</h3>
+                <h3>2023 - Maintenant</h3>
                 <h2>Étudiant en Informatique</h2>
                 <h2 style="font-weight: normal">IUT Montpellier-Sète</h2>
                 <h2 style="font-weight: normal">Montpellier - France</h2>
+                <h2 style="font-weight: normal">En cours de formation</h2>
             </div>
             <div class="sectioncv3">
                 <p>
-                    Je suis à l'IUT depuis 2022, je suis en deuxième année de DUT Informatique.
-                    J'ai choisi cette formation car j'ai toujours été passionné par l'informatique et les nouvelles technologies.
+                    Je suis étudiant à l'IUT depuis 2022, actuellement en deuxième année de BUT Informatique.
+                    J'ai choisi cette formation, car je suis passionné par l'informatique et les nouvelles technologies.
                 </p>
                 <p>
-                    J'ai choisi l'option DACS pour me spécialiser dans la cyber-sécurité et la programmation.
+                    J'ai opté pour l'option DACS afin de me spécialiser en cybersécurité et en programmation.
+                </p>
+            </div>
+        </div>
+        <div class="section">
+            <div class="sectioncv2">
+                <h3>2019 - 2023</h3>
+                <h2>BAC technologique STI2D</h2>
+                <h2 style="font-weight: normal">Lycée Emmanuel d’Alzon Nîmes</h2>
+                <h2 style="font-weight: normal">Nîmes - France</h2>
+                <h2 style="font-weight: normal">Admis Mention Assez Bien</h2>
+            </div>
+            <div class="sectioncv3">
+                <p>
+                    J'ai choisi le parcours BAC STI2D, car je souhaitais suivre une formation scientifique tout en privilégiant des aspects concrets et pratiques.
+                    Grâce à ce parcours, j'ai acquis de nombreuses compétences techniques ainsi que des connaissances solides en industrialisation.
+                </p>
+                <p>
+                    Cette filière m'a donné l'occasion de mener des projets en équipe, notamment dans les domaines de l'automatisation et de la conception technique.
+                </p>
+                <p>
+                    Cette formation m'a permis de me familiariser avec les principes fondamentaux de l'électronique, de la mécanique et de l'automatisation.
                 </p>
             </div>
         </div>
@@ -75,17 +94,13 @@
                         </div>
                         <div class="competencecv">
                             <div class="carre2"></div>
-                            <h2 style="font-weight: normal">JAVA</h2>
+                            <h2 style="font-weight: normal">Java / JavaFX</h2>
                         </div>
                     </div>
                     <div class="competencecv2">
                         <div class="competencecv">
                             <div class="carre2"></div>
                             <h2 style="font-weight: normal">SQL / PL SQL</h2>
-                        </div>
-                        <div class="competencecv">
-                            <div class="carre2"></div>
-                            <h2 style="font-weight: normal">Java / JavaFX</h2>
                         </div>
                         <div class="competencecv">
                             <div class="carre2"></div>
@@ -156,12 +171,15 @@
             </div>
             <div>
                 <h2>En ligne</h2>
-                <div style="display: flex; justify-content: space-evenly;">
+                <div style="display: flex; justify-content: space-between; gap: 10px">
                     <a href="https://www.linkedin.com/in/cyprien-bons/">
                         <img src="css/img/linkedin.svg" alt="Linkedin" style="width: 18px;">
                     </a>
                     <a href="https://www.instagram.com/cypri1.bons/">
                         <img src="css/img/instagram.svg" alt="Instagram" style="width: 18px;">
+                    </a>
+                    <a href="https://github.com/M2M2005">
+                        <img src="css/img/github.svg" alt="GitHub" style="width: 18px;">
                     </a>
                 </div>
             </div>
