--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
-    <div class="header">
+    <a href="http://localhost:63342/Site-Web/index.html" class="header">
         <div class="carre"></div>
         <h1>Cyprien Bons</h1>
         <div>/ Étudiant en Informatique</div>
-    </div>
+    </a>
     <div class="header2">
         <a href="http://localhost:63342/Site-Web/index.html">
             <p class="actuel">À PROPOS DE MOI</p>
@@ -21,10 +21,7 @@
             <p>CV</p>
         </a>
         <a href="http://localhost:63342/Site-Web/projets.html">
-            <p>PROJETS</p>
-        </a>
-        <a href="http://localhost:63342/Site-Web/contact.html">
-            <p>CONTACT</p>
+            <p>Projets</p>
         </a>
     </div>
 </header>
@@ -46,6 +43,9 @@
                     <a href="https://www.instagram.com/cypri1.bons/">
                         <img src="css/img/instagram.svg" alt="Instagram" style="width: 25px;">
                     </a>
+                    <a href="https://github.com/M2M2005">
+                        <img src="css/img/github.svg" alt="GitHub" style="width: 25px;">
+                    </a>
                 </div>
             </div>
             <div style="text-align: left; padding-left: 30px">
@@ -55,7 +55,7 @@
                     <a href="http://localhost:63342/Site-Web/cv.html" class="bonton1">
                         <p>CV</p>
                     </a>
-                    <a href="http://localhost:63342/Site-Web/cv.html" class="bonton2">
+                    <a href="http://localhost:63342/Site-Web/projets.html" class="bonton2">
                         <p>PROJETS</p>
                     </a>
                 </div>
@@ -85,12 +85,15 @@
             </div>
             <div>
                 <h2>En ligne</h2>
-                <div style="display: flex; justify-content: space-evenly;">
+                <div style="display: flex; justify-content: space-between; gap: 10px">
                     <a href="https://www.linkedin.com/in/cyprien-bons/">
                         <img src="css/img/linkedin.svg" alt="Linkedin" style="width: 18px;">
                     </a>
                     <a href="https://www.instagram.com/cypri1.bons/">
                         <img src="css/img/instagram.svg" alt="Instagram" style="width: 18px;">
+                    </a>
+                    <a href="https://github.com/M2M2005">
+                        <img src="css/img/github.svg" alt="GitHub" style="width: 18px;">
                     </a>
                 </div>
             </div>
