--- a/projets.html
+++ b/projets.html
@@ -8,11 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
-    <div class="header">
+    <a href="http://localhost:63342/Site-Web/index.html" class="header">
         <div class="carre"></div>
         <h1>Cyprien Bons</h1>
         <div>/ Étudiant en Informatique</div>
-    </div>
+    </a>
     <div class="header2">
         <a href="http://localhost:63342/Site-Web/index.html">
             <p>À PROPOS DE MOI</p>
@@ -21,10 +21,7 @@
             <p>CV</p>
         </a>
         <a href="http://localhost:63342/Site-Web/projets.html">
-            <p class="actuel">PROJETS</p>
-        </a>
-        <a href="http://localhost:63342/Site-Web/contact.html">
-            <p>CONTACT</p>
+            <p class="actuel">Projets</p>
         </a>
     </div>
 </header>
@@ -41,25 +38,114 @@
                     <div class="carre3"></div>
                     <div style="padding: 0 20px">
                         <h3>LegendsBuster</h3>
-                        <h2 style="font-weight: normal">Montpellier - France</h2>
+                        <h2 style="font-weight: normal">Code Game Jam 2024</h2>
                     </div>
                 </div>
-                <p>
-                    LegendsBuster est un projet personnel que j'ai commencé en 2021.
-                    C'est un jeu vidéo de type MMORPG, c'est-à-dire un jeu de rôle en ligne massivement multijoueur.
+                <p style="padding: 5px 15px">
+                    LegendsBuster est un projet d'équipe réalisé lors de la Code Game 2024.
+                    Il s'agit d'un jeu vidéo de type plateformer "die and retry" qui nous a permis de découvrir Unity.
+                    Vous pouvez retrouver le projet et y jouer sur Windows et Mac en cliquant sur le bouton ci-dessous.
                 </p>
                 <div style="display: flex; justify-content: center; padding: 20px 0">
-                    <a href="http://localhost:63342/Site-Web/projets.html" class="bonton2">
+                    <a href="https://wailreiz.itch.io/legends-buster" class="bonton2">
                         <p style="margin: 0;">Voir le projet</p>
                     </a>
                 </div>
             </div>
-            <div>
+            <div class="image-container">
                 <img src="css/img/LegendsBuster.png" alt="LegendsBuster">
             </div>
         </div>
         <div class="section">
-            <p>dsqdqsdqsd</p>
+            <div class="sectionprojet1">
+                <div style="display: flex;">
+                    <div class="carre3"></div>
+                    <div style="padding: 0 20px">
+                        <h3>Site E-Commerce</h3>
+                        <h2 style="font-weight: normal">Projet Universitaire</h2>
+                    </div>
+                </div>
+                <p style="padding: 5px 15px">
+                    Création d'un site web e-commerce de vente de parfums réalisé en PHP avec une connexion à une base de données. Gestion des utilisateurs, des produits, des ventes et des paniers.
+                </p>
+                <div style="display: flex; justify-content: center; padding: 20px 0">
+                    <a href="https://github.com/M2M2005/E-Commerce" class="bonton2">
+                        <p style="margin: 0;">Voir le projet</p>
+                    </a>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="css/img/site-e-commerce.png" alt="LegendsBuster">
+            </div>
+        </div>
+        <div class="section">
+            <div class="sectionprojet1">
+                <div style="display: flex;">
+                    <div class="carre3"></div>
+                    <div style="padding: 0 20px">
+                        <h3>Site Web Portfolio</h3>
+                        <h2 style="font-weight: normal">Projet Perssonel</h2>
+                    </div>
+                </div>
+                <p style="padding: 5px 15px">
+                    J'ai créé un site web portfolio pour mettre en avant mes compétences, mes aptitudes et mes projets.
+                    Ce site présente également mon parcours académique, mes expériences professionnelles.
+                    Il reflète mon savoir-faire en conception web. Vous y trouverez une section dédiée à mes réalisations.
+                </p>
+                <div style="display: flex; justify-content: center; padding: 20px 0">
+                    <a href="https://github.com/M2M2005/Site-Web" class="bonton2">
+                        <p style="margin: 0;">Voir le projet</p>
+                    </a>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="css/img/site-this.png" alt="LegendsBuster">
+            </div>
+        </div>
+        <div class="section">
+            <div class="sectionprojet1">
+                <div style="display: flex;">
+                    <div class="carre3"></div>
+                    <div style="padding: 0 20px">
+                        <h3>Référendum</h3>
+                        <h2 style="font-weight: normal">Projet Universitaire</h2>
+                    </div>
+                </div>
+                <p style="padding: 5px 15px">
+                    Le projet consiste à créer un système de référendums sécurisés, permettant à une entreprise de gérer des votes de manière cryptée et confidentielle.
+                </p>
+                <div style="display: flex; justify-content: center; padding: 20px 0">
+                    <a href="https://github.com/M2M2005/Referendum" class="bonton2">
+                        <p style="margin: 0;">Voir le projet</p>
+                    </a>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="css/img/referendum.png" alt="LegendsBuster">
+            </div>
+        </div>
+        <div class="section">
+            <div class="sectionprojet1">
+                <div style="display: flex;">
+                    <div class="carre3"></div>
+                    <div style="padding: 0 20px">
+                        <h3>Exel Compétion Escalade</h3>
+                        <h2 style="font-weight: normal">Projet Perssonel</h2>
+                    </div>
+                </div>
+                <p style="padding: 5px 15px">
+                    Le but de ce projet était de comptabiliser les points des compétiteurs lors d'une compétition d'escalade.
+                    Le projet utilise un tableur exel avec des formules pour calculer les points des compétiteurs.
+                </p>
+                <div style="display: flex; justify-content: center; padding: 20px 0">
+                    <a href="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing" class="bonton2">
+                        <p style="margin: 0;">Voir le projet</p>
+                    </a>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="css/img/exel.png" alt="LegendsBuster">
+            </div>
         </div>
     </div>
 </div>
@@ -80,12 +166,15 @@
             </div>
             <div>
                 <h2>En ligne</h2>
-                <div style="display: flex; justify-content: space-evenly;">
+                <div style="display: flex; justify-content: space-between; gap: 10px">
                     <a href="https://www.linkedin.com/in/cyprien-bons/">
                         <img src="css/img/linkedin.svg" alt="Linkedin" style="width: 18px;">
                     </a>
                     <a href="https://www.instagram.com/cypri1.bons/">
                         <img src="css/img/instagram.svg" alt="Instagram" style="width: 18px;">
+                    </a>
+                    <a href="https://github.com/M2M2005">
+                        <img src="css/img/github.svg" alt="GitHub" style="width: 18px;">
                     </a>
                 </div>
             </div>
