--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
-    <a href="http://localhost:63342/Site-Web/index.html" class="header">
+    <a href="../Site-Web/index.html" class="header">
         <div class="carre"></div>
         <h1>Cyprien Bons</h1>
         <div>/ Étudiant en Informatique</div>
     </a>
     <div class="header2">
-        <a href="http://localhost:63342/Site-Web/index.html">
+        <a href="../Site-Web/index.html">
             <p class="actuel">À PROPOS DE MOI</p>
         </a>
-        <a href="http://localhost:63342/Site-Web/cv.html">
+        <a href="../Site-Web/cv.html">
             <p>CV</p>
         </a>
-        <a href="http://localhost:63342/Site-Web/projets.html">
+        <a href="../Site-Web/projets.html">
             <p>Projets</p>
         </a>
     </div>
@@ -52,10 +52,10 @@
                 <p style="font-size: 100px; font-family: 'poppins-semibold', sans-serif;"><strong>Hello</strong></p>
                 <h1>Qui je suis et ce que je fais</h1>
                 <div style="display: flex; padding: 30px; gap: 30px; text-align: center">
-                    <a href="http://localhost:63342/Site-Web/cv.html" class="bonton1">
+                    <a href="../Site-Web/cv.html" class="bonton1">
                         <p>CV</p>
                     </a>
-                    <a href="http://localhost:63342/Site-Web/projets.html" class="bonton2">
+                    <a href="../Site-Web/projets.html" class="bonton2">
                         <p>PROJETS</p>
                     </a>
                 </div>
