fix : bug liens

--- a/projets.html
+++ b/projets.html
@@ -8,19 +8,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
-    <a href="../Site-Web/index.html" class="header">
+    <a href="/index.html" class="header">
         <div class="carre"></div>
         <h1>Cyprien Bons</h1>
         <div>/ Étudiant en Informatique</div>
     </a>
     <div class="header2">
-        <a href="../Site-Web/index.html">
+        <a href="/index.html">
             <p>À PROPOS DE MOI</p>
         </a>
-        <a href="../Site-Web/cv.html">
+        <a href="/cv.html">
             <p>CV</p>
         </a>
-        <a href="../Site-Web/projets.html">
+        <a href="/projets.html">
             <p class="actuel">Projets</p>
         </a>
     </div>
