fix : bug page actuel

--- a/cv.html
+++ b/cv.html
@@ -18,10 +18,10 @@
             <p>À PROPOS DE MOI</p>
         </a>
         <a href="/cv.html">
-            <p>CV</p>
+            <p class="actuel">CV</p>
         </a>
         <a href="/projets.html">
-            <p class="actuel">Projets</p>
+            <p>Projets</p>
         </a>
     </div>
 </header>
