--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </a>
     <div class="header2">
         <a href="/index.html">
-            <p>À PROPOS DE MOI</p>
+            <p class="actuel">À PROPOS DE MOI</p>
         </a>
         <a href="/cv.html">
             <p>CV</p>
         </a>
         <a href="/projets.html">
-            <p class="actuel">Projets</p>
+            <p>Projets</p>
         </a>
     </div>
 </header>
