--- a/cv.html
+++ b/cv.html
@@ -58,7 +58,7 @@
         </div>
         <div class="section">
             <div class="sectioncv2">
-                <h3>2019 - 2023</h3>
+                <h3>2020 - 2023</h3>
                 <h2>BAC technologique STI2D</h2>
                 <h2 style="font-weight: normal">Lycée Emmanuel d’Alzon Nîmes</h2>
                 <h2 style="font-weight: normal">Nîmes - France</h2>
@@ -77,10 +77,13 @@
                 </p>
             </div>
         </div>
+        <div style="margin-top: 50px">
+            <h1>Compétences</h1>
+        </div>
         <div class="section">
             <div class="sectioncv4">
                 <div style="justify-content: left;">
-                    <h1>Compétences</h1>
+                    <h1>Langage de programmation</h1>
                 </div>
                 <div style="display: flex; justify-content: space-around; width: 724px">
                     <div class="competencecv2">
@@ -150,6 +153,25 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div style="margin-top: 50px">
+            <h1>Loisir</h1>
+        </div>
+        <div class="section">
+            <div class="sectioncv2">
+                <h3>2018 - Maintenant</h3>
+                <h2>Escalade</h2>
+                <p style="color: white">
+                    Niveau max : 7C
+                </p>
+            </div>
+            <div class="sectioncv3">
+                <p>
+                    J'ai débuté l'escalade en 2018 au club de Bellegarde. Ce sport m'a permis de me dépasser et de me surpasser.
+                    J'ai eu l'opportunité de participer à des compétitions et à des événements liés à l'escalade, ce qui m'a aidé à développer mon esprit d'équipe et mon sens de la compétition.
+                    Cette expérience m'a également permis de prendre conscience de mes responsabilités envers les autres.
+                </p>
             </div>
         </div>
     </div>
