feat : modif liens

--- a/cv.html
+++ b/cv.html
@@ -34,7 +34,7 @@
         </div>
         <div style="display: flex; width: 724px; justify-content: space-between; margin: 20px 0;">
             <h1>Formation</h1>
-            <a href="docs/CV_2024_Cyprien_BONS_INFORMATIQUE_V8.pdf" class="bonton3">
+            <a href="docs/CV_2024_Cyprien_BONS_INFORMATIQUE_V8.pdf" class="bonton3" target="_blank">
                 <p style="margin: 0;">TÉLÉCHARGER CV</p>
             </a>
         </div>
@@ -180,27 +180,24 @@
 <footer>
     <div class="footer">
         <div>
-            <p>@2024 par Cyprien Bons</p>
+            <p>Cyprien Bons 2025</p>
         </div>
         <div class="footer2">
             <div>
                 <h2>Tel</h2>
-                <p>07 68 51 20 06</p>
+                <a href="tel:0768512006" target="_blank">07 68 51 20 06</a>
             </div>
             <div>
                 <h2>Email</h2>
-                <p>pro.bons.cyprien@gmail.com</p>
+                <a href="mailto:pro.bons.cyprien@gmail.com" target="_blank">pro.bons.cyprien@gmail.com</a>
             </div>
             <div>
                 <h2>En ligne</h2>
                 <div style="display: flex; justify-content: space-between; gap: 10px">
-                    <a href="https://www.linkedin.com/in/cyprien-bons/">
+                    <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
                         <img src="css/img/linkedin.svg" alt="Linkedin" style="width: 18px;">
                     </a>
-                    <a href="https://www.instagram.com/cypri1.bons/">
-                        <img src="css/img/instagram.svg" alt="Instagram" style="width: 18px;">
-                    </a>
-                    <a href="https://github.com/M2M2005">
+                    <a href="https://github.com/M2M2005" target="_blank">
                         <img src="css/img/github.svg" alt="GitHub" style="width: 18px;">
                     </a>
                 </div>
