--- a/projets.html
+++ b/projets.html
@@ -47,7 +47,7 @@
                     Vous pouvez retrouver le projet et y jouer sur Windows et Mac en cliquant sur le bouton ci-dessous.
                 </p>
                 <div style="display: flex; justify-content: center; padding: 20px 0">
-                    <a href="https://wailreiz.itch.io/legends-buster" class="bonton2">
+                    <a href="https://wailreiz.itch.io/legends-buster" class="bonton2" target="_blank">
                         <p style="margin: 0;">Voir le projet</p>
                     </a>
                 </div>
@@ -69,7 +69,7 @@
                     Création d'un site web e-commerce de vente de parfums réalisé en PHP avec une connexion à une base de données. Gestion des utilisateurs, des produits, des ventes et des paniers.
                 </p>
                 <div style="display: flex; justify-content: center; padding: 20px 0">
-                    <a href="https://github.com/M2M2005/E-Commerce" class="bonton2">
+                    <a href="https://github.com/M2M2005/E-Commerce" class="bonton2" target="_blank">
                         <p style="margin: 0;">Voir le projet</p>
                     </a>
                 </div>
@@ -93,7 +93,7 @@
                     Il reflète mon savoir-faire en conception web. Vous y trouverez une section dédiée à mes réalisations.
                 </p>
                 <div style="display: flex; justify-content: center; padding: 20px 0">
-                    <a href="https://github.com/M2M2005/Site-Web" class="bonton2">
+                    <a href="https://github.com/M2M2005/Site-Web" class="bonton2" target="_blank">
                         <p style="margin: 0;">Voir le projet</p>
                     </a>
                 </div>
@@ -115,7 +115,7 @@
                     Le projet consiste à créer un système de référendums sécurisés, permettant à une entreprise de gérer des votes de manière cryptée et confidentielle.
                 </p>
                 <div style="display: flex; justify-content: center; padding: 20px 0">
-                    <a href="https://github.com/M2M2005/Referendum" class="bonton2">
+                    <a href="https://github.com/M2M2005/Referendum" class="bonton2" target="_blank">
                         <p style="margin: 0;">Voir le projet</p>
                     </a>
                 </div>
@@ -138,7 +138,7 @@
                     Le projet utilise un tableur exel avec des formules pour calculer les points des compétiteurs.
                 </p>
                 <div style="display: flex; justify-content: center; padding: 20px 0">
-                    <a href="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing" class="bonton2">
+                    <a href="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing" class="bonton2" target="_blank">
                         <p style="margin: 0;">Voir le projet</p>
                     </a>
                 </div>
@@ -153,27 +153,24 @@
 <footer>
     <div class="footer">
         <div>
-            <p>@2024 par Cyprien Bons</p>
+            <p>Cyprien Bons 2025</p>
         </div>
         <div class="footer2">
             <div>
                 <h2>Tel</h2>
-                <p>07 68 51 20 06</p>
+                <a href="tel:0768512006" target="_blank">07 68 51 20 06</a>
             </div>
             <div>
                 <h2>Email</h2>
-                <p>pro.bons.cyprien@gmail.com</p>
+                <a href="mailto:pro.bons.cyprien@gmail.com" target="_blank">pro.bons.cyprien@gmail.com</a>
             </div>
             <div>
                 <h2>En ligne</h2>
                 <div style="display: flex; justify-content: space-between; gap: 10px">
-                    <a href="https://www.linkedin.com/in/cyprien-bons/">
+                    <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
                         <img src="css/img/linkedin.svg" alt="Linkedin" style="width: 18px;">
                     </a>
-                    <a href="https://www.instagram.com/cypri1.bons/">
-                        <img src="css/img/instagram.svg" alt="Instagram" style="width: 18px;">
-                    </a>
-                    <a href="https://github.com/M2M2005">
+                    <a href="https://github.com/M2M2005" target="_blank">
                         <img src="css/img/github.svg" alt="GitHub" style="width: 18px;">
                     </a>
                 </div>
