--- a/cv.html
+++ b/cv.html
@@ -193,7 +193,7 @@
             </div>
             <div>
                 <h2>En ligne</h2>
-                <div style="display: flex; justify-content: space-between; gap: 10px">
+                <div style="display: flex; justify-content: space-evenly;">
                     <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
                         <img src="css/img/linkedin.svg" alt="Linkedin" style="width: 18px;">
                     </a>
