--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     </a>
                 </div>
                 <p>
-                    Actuellement étudiant en deuxième année de BUT Informatique, je suis à la recherche d’un stage de 10
-                    à 12 semaines débutant le 13 janvier 2025. Ce stage représente pour moi une opportunité de mettre en
+                    Actuellement étudiant en deuxième année de BUT Informatique, je suis à la recherche d’un stage de 9
+                    à 11 semaines à partir de maintenant. Ce stage représente pour moi une opportunité de mettre en
                     pratique mes compétences dans un cadre professionnel stimulant.
                 </p>
             </div>
