feat: add bouton accès

--- a/projets.html
+++ b/projets.html
@@ -137,9 +137,12 @@
                     Le but de ce projet était de comptabiliser les points des compétiteurs lors d'une compétition d'escalade.
                     Le projet utilise un tableur exel avec des formules pour calculer les points des compétiteurs.
                 </p>
-                <div style="display: flex; justify-content: center; padding: 20px 0">
+                <div style="display: flex; justify-content: center; padding: 20px 0; gap: 20px">
                     <a href="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing" class="bonton2" target="_blank">
                         <p style="margin: 0;">Voir le projet</p>
+                    </a>
+                    <a href="CompetitionEscalade/escalade.html" class="bonton2" target="_blank">
+                        <p style="margin: 0;">Site Résultat</p>
                     </a>
                 </div>
             </div>
